# csp

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: FindSPIRVCross.cmake  csp.cmake
include/csp/: csp.hpp
src/: generate_shader_info.cpp
templates/: shader_info.cpp.inja  shader_info.hpp.inja
test/: CMakeLists.txt  main.cpp
test/shaders/: triangle.frag  triangle.vert
tools/: CMakeLists.txt  generate_shader_info.cpp
